# H3

./: .gitignore  Makefile  README.md  test.txt
HexToStr/: CMakeLists.txt  main.cpp
call_back/: CMakeLists.txt
read_and_upload_py/: .read_and_upload.py.swp  ca.crt  datablocks2.txt~  datablocks3.txt  datablocks3.txt~  read_and_upload (复件).py  read_and_upload.py~
read_data_block/: CMakeLists.txt  data_sruct.h  main.cpp
serialReadAndSave/: .gitignore  CMakeLists.txt  analyze_head.h  config.h  count.txt  data.h  dir.h  log.txt  main.c  protocol.h  serial.h  unused.h
serialReadAndSave/unbinduser/: head_file.txt  head_file.txt~
serialReadAndSave/user/: head_file (复件).txt~  head_file.txt  head_file.txt~  head_file_test.txt~  sync_status.txt
serialWrite/: CMakeLists.txt  main.c
serial_read_save_openwrtPack/: Makefile
serial_read_save_openwrtPack/src/: CMakeLists.txt  Makefile  Makefile~  config.h  data.h  dir.h  main.c  protocol.h  serial  serial.h  unused.h
serial_read_save可以打包/src/: CMakeLists.txt  Makefile  Makefile~  config.h  data.h  dir.h  main.c  protocol.h  serial.h  serial_read_save
serial_v_2_0/: CMakeLists.txt  analyze_head.h  config.h  data.h  dir.h  flash_head_data.h  init.h  main.c  protocol.h  serial.h  utils.h
shell_dir/: auto_update_H3_SW.sh  clear_log.sh  download.sh  uoload_my_softwarte.sh  从云端拉下来
test/: CMakeLists.txt  main.c
test_data/: CMakeLists.txt  Makefile~  analyze_head.h  config.h  data.h  dir.h  main.c  serial.h
test_serial/: CMakeLists.txt  serial.h
uart/: CMakeLists.txt  main.c
(+1 files in other folders)
